# procrastinate

./: .gitignore  Cargo.toml  README.md  generate
client/: Cargo.toml  Trunk.toml  index.html  package-lock.json  package.json  tailwind.config.js  tailwind.css
client/src/: main.rs
client/src/app_components/: link.rs  main_nav.rs  mod.rs  sign_in_gate.rs
client/src/app_components/sign_in_gate/: mod.rs  rail.rs
client/src/components/: display_button.rs  mod.rs  sign_in_gate.rs
client/src/components/rails/: branch.rs  mod.rs  rail.rs  rail_color.rs  ring.rs  stop.rs  track.rs  tracks.rs
client/src/hooks/: mod.rs  use_query.rs  use_web3.rs
client/src/hooks/use_accounts/: account.rs  accounts.rs  mod.rs
client/src/hooks/use_api/: mod.rs
client/src/hooks/use_api/api/: check_auth.rs  error.rs  mod.rs  sign_in.rs
client/src/pages/: app_page.rs  home_page.rs  mod.rs  sign_in_page.rs
client/src/routes/: app.rs  index.rs  layout.rs  mod.rs
entity/: Cargo.toml
entity/src/: attachments.rs  emojis.rs  ethaddresses.rs  messages.rs  mod.rs  prelude.rs  reactions.rs  replies.rs  sea_orm_active_enums.rs  users.rs
migrations/: 20220706194946_init.down.sql  20220706194946_init.sql  20220708175427_threads.up.sql  20220712212036_wallets.sql  20220712213351_optional-name.sql
procrastinate/: .env.example  Cargo.toml
procrastinate/src/: lib.rs
procrastinate/src/data/: attachment.rs  id.rs  message.rs  mod.rs  reaction.rs  rich_text.rs
procrastinate/src/websocket/: mod.rs  notifications.rs
procrastinate/src/websocket/handler/: mod.rs  recv.rs  send.rs
server/: .env.example  Cargo.toml
server/src/: lib.rs
server/src/extractor/: ethereum_address.rs  mod.rs  session.rs
server/src/graphql/: mod.rs
server/src/graphql/context/: mod.rs
server/src/graphql/scalars/: json.rs
server/src/graphql/schema/: mod.rs
server/src/graphql/schema/connection/: connection_node.rs  connection_result.rs  cursor.rs  edge.rs  mod.rs  page_info.rs
server/src/graphql/schema/connection/connector/: database_connector.rs  iterator_connector.rs  mod.rs
server/src/graphql/schema/query/: mod.rs
server/src/graphql/schema/query/messages/: messages_connector.rs  mod.rs
server/src/graphql/schema/query/users/: mod.rs  users_connector.rs
server/src/rest/: auth.rs  mod.rs
server/src/websocket/: mod.rs
server/src/websocket/handler/: recv.rs  send.rs
