[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = "0.8.0"
web3 = { version = "0.18.0", default-features = false, features = ["wasm", "eip-1193"] }
yew = "0.19.3"
yew-router = "0.16.0"
