[package]
name = "server"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
name = "server"

[dependencies]
actix = "0.13.0"
actix-web = "4.0.1"
actix-web-actors = "4.1.0"
anyhow = "1.0.58"
dotenv = "0.15.0"
procrastinate = { path = "../procrastinate" }
lazy_static = "1.4.0"
log = "0.4.17"
pretty_env_logger = "0.4.0"
ron = "0.7.1"
sea-orm = "0.8.0"
serde = "1.0.138"
url = { version = "2.2.2", features = ["serde"] }
uuid = { version = "1.1.2", features = ["serde"] }
