[package]
name = "server"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
name = "server"

[dependencies]
actix = "0.13.0"
actix-web = "4.0.1"
actix-web-actors = "4.1.0"
anyhow = "1.0.58"
dotenv = "0.15.0"
entity = { path = "../entity" }
juniper = { git = "https://github.com/graphql-rust/juniper", rev = "30d80dff12212ab59f08f850338abc9d0680a42a", features = ["uuid", "chrono"] }
juniper_actix = { git = "https://github.com/graphql-rust/juniper", rev = "30d80dff12212ab59f08f850338abc9d0680a42a" }
lazy_static = "1.4.0"
log = "0.4.17"
pretty_env_logger = "0.4.0"
ron = "0.7.1"
sea-orm = { version = "0.8.0", features = ["sqlx-postgres", "runtime-actix-rustls"] }
serde = "1.0.138"
url = { version = "2.2.2", features = ["serde"] }
actix-files = "0.6.10"
async-trait = "0.1.56"
serde_json = "1.0.82"
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = { version = "0.4.19", features = ["serde"] }
web3 = "0.18.0"
hex = "0.4.3"
